--- a/.github/workflows/python-greetings.yaml
+++ b/.github/workflows/python-greetings.yaml
@@ -11,13 +11,34 @@ jobs:
             - uses: actions/checkout@v3
             - name: Step decription
               run: echo "Building and deploying Python Greetings Docker image..."
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
+            - name: Login to Docker Hub
+              run: docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p --password-stdin ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+            - name: Building and Pushing Docker image
+              run: | 
+                docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest .
+                docker push ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest
     deploy-to-dev:
         runs-on: ubuntu-latest
         needs: [build-docker-image]
         steps:
+
             - uses: actions/checkout@v3
             - name: Step decription
               run: echo "Deploying to DEV Environment..."
+            - name: Pulling latest version of python-greetings-app image from Docker Hub
+              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest
+            - name: Stopping docker service if running
+              run: docker-compose stop -f docker-compose.yml greetings-app-dev || echo "Container STOPPED"
+            - name: Removing docker service if existing
+              run: docker-compose rm -f docker-compose.yml greetings-app-dev || echo "Container REMOVED"
+            - name: Starting docker service with latest image
+              run: docker-compose -f docker-compose.yml up -d greetings-app-dev || echo "Container STARTED on DEV Environment"
+            - name: Verify container is running by filtering running containers
+              run: docker ps | grep greetings-app-dev
+
+            
     tests-on-dev:
         runs-on: ubuntu-latest
         needs: [deploy-to-dev]
@@ -25,6 +46,10 @@ jobs:
             - uses: actions/checkout@v3
             - name: Step decription
               run: echo "Executing Tests on DEV Environment..."
+            - name: Pulling latest version of api-tests image from Docker Hub
+              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest
+            - name: Running API Tests against DEV Environment
+              run: docker run --network="host" --rm ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest run greetings greetings_dev
     deploy-to-stg:
         runs-on: ubuntu-latest
         needs: [tests-on-dev]
@@ -32,6 +57,16 @@ jobs:
             - uses: actions/checkout@v3
             - name: Step decription
               run: echo "Deploying to STG Environment..."
+            - name: Pulling latest version of python-greetings-app image from Docker Hub
+              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest
+            - name: Stopping docker service if running
+              run: docker-compose stop -f docker-compose.yml greetings-app-stg || echo "Container STOPPED"
+            - name: Removing docker service if existing
+              run: docker-compose rm -f docker-compose.yml greetings-app-stg || echo "Container REMOVED"
+            - name: Starting docker service with latest image
+              run: docker-compose -f docker-compose.yml up -d greetings-app-stg || echo "Container STARTED on STG Environment"
+            - name: Verify container is running by filtering running containers
+              run: docker ps | grep greetings-app-stg
     tests-on-stg:
         runs-on: ubuntu-latest
         needs: [deploy-to-stg]
@@ -39,6 +74,10 @@ jobs:
             - uses: actions/checkout@v3
             - name: Step decription
               run: echo "Executing Tests on STG Environment..."
+            - name: Pulling latest version of api-tests image from Docker Hub
+              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest
+            - name: Running API Tests against STG Environment
+              run: docker run --network="host" --rm ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest run greetings greetings_stg
     deploy-to-prod:
         runs-on: ubuntu-latest
         needs: [tests-on-stg]
@@ -46,6 +85,16 @@ jobs:
             - uses: actions/checkout@v3
             - name: Step decription
               run: echo "Deploying to PROD Environment..."
+            - name: Pulling latest version of python-greetings-app image from Docker Hub
+              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest
+            - name: Stopping docker service if running
+              run: docker-compose stop -f docker-compose.yml greetings-app-prod || echo "Container STOPPED"
+            - name: Removing docker service if existing
+              run: docker-compose rm -f docker-compose.yml greetings-app-prod || echo "Container REMOVED"
+            - name: Starting docker service with latest image
+              run: docker-compose -f docker-compose.yml up -d greetings-app-prod || echo "Container STARTED on PROD Environment"
+            - name: Verify container is running by filtering running containers
+              run: docker ps | grep greetings-app-prod
     tests-on-prod:
         runs-on: ubuntu-latest
         needs: [deploy-to-prod]
@@ -53,3 +102,7 @@ jobs:
             - uses: actions/checkout@v3
             - name: Step decription
               run: echo "Executing Tests on PROD Environment..."
+            - name: Pulling latest version of api-tests image from Docker Hub
+              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest
+            - name: Running API Tests against PROD Environment
+              run: docker run --network="host" --rm ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest run greetings greetings_prod
