--- a/.github/workflows/python-greetings.yaml
+++ b/.github/workflows/python-greetings.yaml
@@ -14,7 +14,7 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v2
             - name: Login to Docker Hub
-              run: docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p --password-stdin ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+              run: docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
             - name: Building and Pushing Docker image
               run: | 
                 docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest .
