--- a/.github/workflows/python-greetings.yaml
+++ b/.github/workflows/python-greetings.yaml
@@ -23,98 +23,60 @@ jobs:
         runs-on: ubuntu-latest
         needs: [build-docker-image]
         steps:
-
             - uses: actions/checkout@v3
-            - name: Step decription
-              run: echo "Deploying to DEV Environment..."
-            - name: Pulling latest version of python-greetings-app image from Docker Hub
-              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest
-            - name: Stopping docker service if running
-              run: docker compose stop -f docker-compose.yml greetings-app-dev || echo "Container STOPPED"
-            - name: Removing docker service if existing
-              run: docker compose rm -f docker-compose.yml greetings-app-dev || echo "Container REMOVED"
-            - name: Starting docker service with latest image
-              run: docker compose -f docker-compose.yml up -d greetings-app-dev|| echo "Container STARTED on DEV Environment"
-            - name: Verify container is running by filtering running containers
-              run: docker ps --filter "name=greetings-app-dev"
+            - uses: ./.github/actions/deploy
+              with:
+                environment: 'dev'
+
     tests-on-dev:
         runs-on: ubuntu-latest
         needs: [deploy-to-dev]
         steps:
             - uses: actions/checkout@v3
-            - name: Step decription
-              run: echo "Executing Tests on DEV Environment..."
-            - name: Pulling latest version of api-tests image from Docker Hub
-              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest
-            - name: Running container  from the deploy job
-              run: docker run -p 7001:3000 gveljan/python-greetings-app:latest
+            - uses: ./.github/actions/test
+              with:
+                environment: 'dev'
             # - name: Starting docker service with latest image
             #   run: docker compose -f docker-compose.yml up -d greetings-app-dev || echo "Container STARTED on DEV Environment"
             # - name: Verify container is running by filtering running containers
             #   run: docker ps --filter "name=greetings-app-dev"
-            - name: Running API Tests against DEV Environment
-              run: docker run --network="host" --rm ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest run greetings greetings_dev
     deploy-to-stg:
         runs-on: ubuntu-latest
         needs: [tests-on-dev]
         steps:
             - uses: actions/checkout@v3
-            - name: Step decription
-              run: echo "Deploying to STG Environment..."
-            - name: Pulling latest version of python-greetings-app image from Docker Hub
-              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest
-            - name: Stopping docker service if running
-              run: docker-compose stop -f docker-compose.yml greetings-app-stg || echo "Container STOPPED"
-            - name: Removing docker service if existing
-              run: docker-compose rm -f docker-compose.yml greetings-app-stg || echo "Container REMOVED"
-            - name: Starting docker service with latest image
-              run: docker-compose -f docker-compose.yml up -d greetings-app-stg || echo "Container STARTED on STG Environment"
-            - name: Verify container is running by filtering running containers
-              run: docker ps --filter "name=greetings-app-stg"
+            - uses: ./.github/actions/deploy
+              with:
+                environment: 'stg'
     tests-on-stg:
         runs-on: ubuntu-latest
         needs: [deploy-to-stg]
         steps:
             - uses: actions/checkout@v3
-            - name: Step decription
-              run: echo "Executing Tests on STG Environment..."
-            - name: Pulling latest version of api-tests image from Docker Hub
-              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest
+            - uses: ./.github/actions/test
+              with:
+                environment: 'stg'
             # - name: Starting docker service with latest image
             #   run: docker compose -f docker-compose.yml up -d greetings-app-stg || echo "Container STARTED on STG Environment"
             # - name: Verify container is running by filtering running containers
             #   run: docker ps --filter "name=greetings-app-stg"
-            - name: Running API Tests against STG Environment
-              run: docker run --network="host" --rm ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest run greetings greetings_stg
     deploy-to-prod:
         runs-on: ubuntu-latest
         needs: [tests-on-stg]
         steps:
             - uses: actions/checkout@v3
-            - name: Step decription
-              run: echo "Deploying to PROD Environment..."
-            - name: Pulling latest version of python-greetings-app image from Docker Hub
-              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest
-            - name: Stopping docker service if running
-              run: docker-compose stop -f docker-compose.yml greetings-app-prod || echo "Container STOPPED"
-            - name: Removing docker service if existing
-              run: docker-compose rm -f docker-compose.yml greetings-app-prod || echo "Container REMOVED"
-            - name: Starting docker service with latest image
-              run: docker-compose -f docker-compose.yml up -d greetings-app-prod || echo "Container STARTED on PROD Environment"
-            - name: Verify container is running by filtering running containers
-              run: docker ps --filter "name=greetings-app-prod"
+            - uses: ./.github/actions/deploy
+              with:
+                environment: 'prod'
     tests-on-prod:
         runs-on: ubuntu-latest
         needs: [deploy-to-prod]
         steps:
             - uses: actions/checkout@v3
-            - name: Step decription
-              run: echo "Executing Tests on PROD Environment..."
-            - name: Pulling latest version of api-tests image from Docker Hub
-              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest
+            - uses: ./.github/actions/test
+              with:
+                environment: 'prod'
             # - name: Starting docker service with latest image
             #   run: docker compose -f docker-compose.yml up -d greetings-app-prod || echo "Container STARTED on PROD Environment"
             # - name: Verify container is running by filtering running containers
             #   run: docker ps --filter "name=greetings-app-prod"
-            - name: Running API Tests against PROD Environment
-              run: docker run --network="host" --rm ${{ secrets.DOCKER_HUB_USERNAME }}/api-tests:latest run greetings greetings_prod
