--- a/.github/workflows/python-greetings.yaml
+++ b/.github/workflows/python-greetings.yaml
@@ -9,16 +9,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - name: Step decription
-              run: echo "Building and deploying Python Greetings Docker image..."
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
-            - name: Login to Docker Hub
-              run: docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-            - name: Building and Pushing Docker image
-              run: | 
-                docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest .
-                docker push ${{ secrets.DOCKER_HUB_USERNAME }}/python-greetings-app:latest
+            - uses: ./.github/actions/build
+              with:
+                docker_hub_username: ${{ secrets.DOCKER_HUB_USERNAME }}
+                docker_hub_access_token: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     deploy-to-dev:
         runs-on: ubuntu-latest
         needs: [build-docker-image]
