--- a/.github/workflows/python-greetings.yaml
+++ b/.github/workflows/python-greetings.yaml
@@ -21,6 +21,7 @@ jobs:
             - uses: ./.github/actions/deploy
               with:
                 environment: 'dev'
+                docker_hub_username: ${{ secrets.DOCKER_HUB_USERNAME }}
 
     tests-on-dev:
         runs-on: ubuntu-latest
@@ -30,6 +31,7 @@ jobs:
             - uses: ./.github/actions/test
               with:
                 environment: 'dev'
+                docker_hub_username: ${{ secrets.DOCKER_HUB_USERNAME }}
             # - name: Starting docker service with latest image
             #   run: docker compose -f docker-compose.yml up -d greetings-app-dev || echo "Container STARTED on DEV Environment"
             # - name: Verify container is running by filtering running containers
@@ -42,6 +44,7 @@ jobs:
             - uses: ./.github/actions/deploy
               with:
                 environment: 'stg'
+                docker_hub_username: ${{ secrets.DOCKER_HUB_USERNAME }}
     tests-on-stg:
         runs-on: ubuntu-latest
         needs: [deploy-to-stg]
@@ -62,6 +65,8 @@ jobs:
             - uses: ./.github/actions/deploy
               with:
                 environment: 'prod'
+                docker_hub_username: ${{ secrets.DOCKER_HUB_USERNAME }}
+            
     tests-on-prod:
         runs-on: ubuntu-latest
         needs: [deploy-to-prod]
@@ -70,6 +75,7 @@ jobs:
             - uses: ./.github/actions/test
               with:
                 environment: 'prod'
+                docker_hub_username: ${{ secrets.DOCKER_HUB_USERNAME }}
             # - name: Starting docker service with latest image
             #   run: docker compose -f docker-compose.yml up -d greetings-app-prod || echo "Container STARTED on PROD Environment"
             # - name: Verify container is running by filtering running containers
